<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="306dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/light_grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/hello"
            android:textColor="@color/dark_blue"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:weightSum="2">

            <Button
                android:id="@+id/reset_button"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:text="@string/reset"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/play_again_button"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/backorange"
                android:text="@string/play_again"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>