<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="306dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/light_grey"
    android:orientation="vertical"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="bottom|center"
            android:padding="4dp"
            android:text="@string/you_exit"
            android:textColor="@color/dark_blue"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:weightSum="2">

            <Button
                android:id="@+id/no_button"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:text="@string/no"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/yes_button"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/backorange"
                android:text="@string/yes"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>