<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActivityMain">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="420dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="28dp">


        <LinearLayout
            android:id="@+id/relativ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="360dp"
                android:layout_height="210dp"
                app:srcCompat="@drawable/tic" />

        </LinearLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativ"
            android:layout_centerHorizontal="true"
            android:text="@string/choose_mode"
            android:textColor="@color/dark_blue"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt1"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:background="@drawable/back"
            android:fontFamily="sans-serif-medium"
            android:text="@string/with_ai"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt2"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/backwhite"
            android:fontFamily="sans-serif-medium"
            android:text="@string/with_friend"
            android:textColor="@color/dark_blue" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:adjustViewBounds="true"
        android:background="@drawable/fab"
        android:elevation="16dp"
        android:padding="12dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/set" />


</RelativeLayout>