<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    android:background="@color/white"
    tools:context=".ActivityName">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="268dp"
        android:layout_height="196dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-4dp"
        app:srcCompat="@drawable/backnamekruh" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playeronewall"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="102dp"
        android:text="@string/enter_name"
        android:textColor="@color/dark_blue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playeronewall2"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_alignStart="@+id/button2"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="209dp"
        android:backgroundTint="@color/dark_red"
        android:hint="@string/first_player"
        android:theme="@style/TextLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playerone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:maxLength="6"

            android:inputType="textPersonName|textCapWords"
            android:singleLine="true"
            android:textColor="@color/blue"
            android:textColorHint="@color/grey"
            android:theme="@style/TextLabel" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playeronewall"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playeronewall2"
        android:layout_alignParentBottom="false"
        android:layout_gravity="bottom"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/dark_red"
        android:hint="@string/second_player"
        android:theme="@style/TextLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playerone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/playeronewall"
            android:backgroundTint="@color/blue"
            android:inputType="textPersonName|textCapWords"
            android:singleLine="true"
            android:textColor="@color/blue"
            android:textColorHint="@color/grey"
            android:maxLength="6"
            android:theme="@style/TextLabel" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="72dp"
        android:background="@drawable/backwhite"
        android:fontFamily="sans-serif-medium"
        android:text="@string/continue_txt" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="154dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"

        app:srcCompat="@drawable/backname" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="166dp"/>


</RelativeLayout>