<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootlay"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">



    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="310dp"
            android:layout_height="190dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="42dp"
            android:background="@drawable/tic"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-64dp"
            android:text="@string/app_name"

            android:textColor="@color/dark_blue"
            android:textSize="32sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/r3"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_below="@+id/r2"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:background="@drawable/theme" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="72dp"
            android:text="@string/difficulty"

            android:textColor="@color/tint" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"

            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@color/cardview_shadow_start_color" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:textColor="@color/tint"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="16dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/r4"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_below="@+id/r3"
        android:layout_alignParentStart="true">

        <Switch
            android:id="@+id/swith2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="32dp"
            android:textColorLink="@color/colorAccent"
            android:theme="@style/SCBSwitch" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:background="@drawable/vibration" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="72dp"

            android:text="@string/vibration"
            android:textColor="@color/tint" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:background="@color/cardview_shadow_start_color"

            android:layout_alignParentBottom="true"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/r5"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_below="@+id/r4"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"

            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:background="@drawable/noads" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"

            android:layout_marginStart="72dp"
            android:text="@string/no_ads"
            android:textColor="@color/tint" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@color/cardview_shadow_start_color"

            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/r6"
        android:layout_width="match_parent"
        android:layout_height="66dp"

        android:layout_below="@+id/r5"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"

            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:background="@drawable/star" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="72dp"
            android:text="@string/rating_app"

            android:textColor="@color/tint" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"

            android:layout_alignParentBottom="true"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@color/cardview_shadow_start_color" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/r7"
        android:layout_width="match_parent"
        android:layout_height="66dp"

        android:layout_below="@+id/r6"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:background="@drawable/feedbacks" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:layout_centerVertical="true"
            android:layout_marginStart="72dp"
            android:text="@string/feedback"
            android:textColor="@color/tint" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@color/cardview_shadow_start_color" />
    </RelativeLayout>

</LinearLayout>